--- a/index.html
+++ b/index.html
@@ -270,6 +270,15 @@
         </div>
     </section>
     <!-- Portfolio -->
+
+
+
+
+
+
+
+
+
     <section class="portfolio" id="portfolio">
         <div class="heading">
             <h2>Projects</h2>
@@ -277,12 +286,14 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
+
+
+                <img src="Bewakoof.webp" alt="">
+                <br>
                 <div><h3>Bewakoof - clone</h3></div>
                 <p style="font-size:10px" >Bewakoof is an Online Shopping site for Men and Women Clothing. Shop from a wide range of T-shirts, Mobile Covers, Accessories and more at the best prices.</p>
                 <p>------</p>
                 <p style="font-size:10px" >Tech Stacks - HTML , CSS , JAVASCRIPT </p>
-                <br>
-                <img src="Bewakoof.webp" alt="">
                 <br>
                 <button  
                 onclick=" window.open('https://github.com/yogeshsaini21/bewakoof.com','_blank')" >
@@ -296,12 +307,13 @@
 
 
             <div class="portfolio-img">
+
+                <img src="godrej-e1424245006526.jpg" alt="">
+                <br>
                 <div><h3>Nature Basket - Clone</h3></div>
                 <p style="font-size:10px" >Nature's Basket is an Indian grocery delivery chain of retail stores focused in gourmet food. It has a range of organic food, imported ingredients and exotic foods. </p>
                 <p>------</p>
                 <p style="font-size:10px" >Tech Stacks - HTML , CSS , JAVASCRIPT </p>
-                <br>
-                <img src="godrej-e1424245006526.jpg" alt="">
                 <br>
                 <button  
                 onclick=" window.open('https://github.com/yogeshsaini21/narturebasketproject','_blank')" >
@@ -312,18 +324,33 @@
                     Live
                 </button>
             </div>
-            <!-- <div class="portfolio-img">
-                <img src="blog-4.jpg" alt="">
-            </div>
             <div class="portfolio-img">
-                <img src="blog-5.jpg" alt="">
+                <img src="swagger.png" alt="">
+                <br>
+                <div><h3>Payment Wallet Application - Clone</h3></div>
+                <br>
+                <p style="font-size:10px" >This is an e-wallet application linked to a bank account that allows a user to make transactions, pay bills and receive cashbacks </p>
+                <p>------</p>
+                <p style="font-size:10px" >Tech Stacks - Java 8, SpringBoot, JPQL, MySQL, Git, Maven, Jenkins . </p>
+                <br>
+                <button
+                        onclick=" window.open('https://github.com/yogeshsaini21/Wallet_Payment_Application','_blank')" >
+                    Github
+                </button>
+<!--                <button-->
+<!--                        onclick=" window.open('https://relaxed-puppy-0a2901.netlify.app/','_blank')" >-->
+<!--                    Live-->
+<!--                </button>-->
             </div>
-            <div class="portfolio-img">
-                <img src="blog-6.jpg" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="blog-7.jpg" alt="">
-            </div> -->
+<!--            <div class="portfolio-img">-->
+<!--                <img src="blog-5.jpg" alt="">-->
+<!--            </div>-->
+<!--            <div class="portfolio-img">-->
+<!--                <img src="blog-6.jpg" alt="">-->
+<!--            </div>-->
+<!--            <div class="portfolio-img">-->
+<!--                <img src="blog-7.jpg" alt="">-->
+<!--            </div>-->
             
         </div>
     </section>
