--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                 </button>
             </div>
             <div class="portfolio-img">
-                <img src="swagger.png" alt="">
-                <br>
+                <img src="Ewallet2.jpg" alt="">
+
                 <div><h3>Payment Wallet Application - Clone</h3></div>
                 <br>
                 <p style="font-size:10px" >This is an e-wallet application linked to a bank account that allows a user to make transactions, pay bills and receive cashbacks </p>
