--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <span>yogesh000saini@gmail.com</span>
                     </div>
                 </div>
-                <a download="" href="Yogesh-saini-Resume.pdf"  class="btn">Download Resume</a>
+                <a download="" href="Yogesh-Saini-Resume.pdf"  class="btn">Download Resume</a>
             </div>
         </div>
     </section>
