--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 <!--                </button>-->
             </div>
 <!--            <div class="portfolio-img">-->
-<!--                <img src="blog-5.jpg" alt="">-->
+<!--                -->
 <!--            </div>-->
 <!--            <div class="portfolio-img">-->
 <!--                <img src="blog-6.jpg" alt="">-->
@@ -353,6 +353,15 @@
 <!--            </div>-->
             
         </div>
+        <br>
+        <br>
+
+        <br>
+        <br>
+        <h2 style="text-align: center" >Github Calander</h2>
+        <br>
+        <br>
+        <div class="github"> <img src="GithubCal.png" alt=""> </div>
     </section>
     <!-- Contact -->
     <section class="contact" id="contact">
