--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
 
-<!-- 
+
                 <div class="timeline-section">
                     <div class="timeline-date">
                         2021 - 2024
@@ -141,17 +141,17 @@
                                     <p class="degree">Bachelor's in Computer Education</p>
                                 </div>
                                 <div class="box-content">
-                                    <!-- <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/" -->
-                                       <!-- target=_blank style="color: white;">Website</a> -->
-<!--                                     <div class="box-item">💥I am pursuing BCA pre Final year.I have studied software engineering subjects like DS,
+<!--                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
+                                        target=_blank style="color: white;">Website</a>  -->
+                                   <div class="box-item">💥I am pursuing BCA pre Final year.I have studied software engineering subjects like DS,
                                         Algorithms, DBMS, OS etc.</div>
                                     <div class="box-item"><b>💥 Percentage</b>:75.7% (I year) </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div> -->
-<!--  --> 
+                </div> 
+
                 <div class="timeline-section">
                     <div class="timeline-date">
                         2019 - 2021
